5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3990/executions/1573_1332.log
== TEST (2019-03-11 15:19:33) 
-- CODE:
aresta =
area = 
 
print(round(22.5, 23))
-- ERROR:
File "XXXX", line 1
    aresta =
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:19:52) 
-- CODE:
print(round(22.5, 23))
-- OUTPUT:
22.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:19:56) 
-- CODE:
print(round(22.5, 23))
-- EXECUTION TIME:
0.163587
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
22.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:31:17) 
-- CODE:
print(round(47.53**0.33, 4))


-- OUTPUT:
3.576
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:31:23) 
-- CODE:
print(round(47.53**0.33, 4))


-- EXECUTION TIME:
0.214339
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
3.576
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:31:29) 
-- CODE:
print(round(47.53**0.3, 4))


-- OUTPUT:
3.1849
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:31:32) 
-- CODE:
print(round(47.53**0.3, 4))


-- EXECUTION TIME:
0.141391
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
3.1849
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:31:34) 
-- CODE:
print(round(47.53**0.3, 4))


-- OUTPUT:
3.1849
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:32:29) 
-- CODE:
print(round(37.53**0.3, 4))


-- OUTPUT:
2.967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:32:32) 
-- CODE:
print(round(37.53**0.3, 4))


-- EXECUTION TIME:
0.139071
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
2.967
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:32:33) 
-- CODE:
print(round(37.53**0.3, 4))


-- OUTPUT:
2.967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:32:49) 
-- CODE:
print(round(37.53**0.33, 4))


-- OUTPUT:
3.3078
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:32:52) 
-- CODE:
print(round(37.53**0.33, 4))


-- EXECUTION TIME:
0.184799
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
3.3078
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:34:27) 
-- CODE:
print(round(1,53**0.35**2, 4))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round(1,53**0.35**2, 4))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:34:35) 
-- CODE:
print(round(1,5 3**0.3 5**2, 4))


-- ERROR:
File "XXXX", line 1
    print(round(1,5 3**0.3 5**2, 4))
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:34:40) 
-- CODE:
print(round(1,5 3**0.3 5**2, 4))


-- EXECUTION TIME:
0.133347
-- ERROR:
  File "/home/codebench/codes/1573/1332/main.py", line 1
    print(round(1,5 3**0.3 5**2, 4))
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:34:43) 
-- CODE:
print(round(1,5 3**0.3 5**2, 4))


-- ERROR:
File "XXXX", line 1
    print(round(1,5 3**0.3 5**2, 4))
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:36:43) 
-- CODE:
print(round((37.5)**0.33, 4))


-- OUTPUT:
3.307
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:36:47) 
-- CODE:
print(round((37.5)**0.3, 4))


-- OUTPUT:
2.9663
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:36:49) 
-- CODE:
print(round((37.5)**0.3, 4))


-- EXECUTION TIME:
0.187025
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
2.9663
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:36:54) 
-- CODE:
print(round((37.5)**0.33, 4))


-- EXECUTION TIME:
0.182235
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
3.307
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:36:55) 
-- CODE:
print(round((37.5)**0.33, 4))


-- OUTPUT:
3.307
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:36:56) 
-- CODE:
print(round((37.5)**0.33, 4))


-- EXECUTION TIME:
0.169283
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
3.307
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:37:09) 
-- CODE:
print(round((37.5)**0.3, 4))


-- OUTPUT:
2.9663
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:37:11) 
-- CODE:
print(round((37.5)**0.3, 4))


-- EXECUTION TIME:
0.127502
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
2.9663
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:37:12) 
-- CODE:
print(round((37.5)**0.3, 4))


-- OUTPUT:
2.9663
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:38:45) 
-- CODE:
print(round(1.5(15**2)**0.3, 4))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round(1.5(15**2)**0.3, 4))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:38:54) 
-- CODE:
print(round(1.5 (15**2)**0.3, 4))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round(1.5 (15**2)**0.3, 4))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:41:28) 
-- CODE:
print(round((1.5)**0.06, 4))




-- OUTPUT:
1.0246
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:41:30) 
-- CODE:
print(round((1.5)**0.06, 4))




-- EXECUTION TIME:
0.255403
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
1.0246
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:41:31) 
-- CODE:
print(round((1.5)**0.06, 4))




-- OUTPUT:
1.0246
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:41:37) 
-- CODE:
print(round((1.5)**0.066, 4))




-- OUTPUT:
1.0271
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:41:39) 
-- CODE:
print(round((1.5)**0.066, 4))




-- EXECUTION TIME:
0.157538
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
1.0271
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:41:40) 
-- CODE:
print(round((1.5)**0.066, 4))




-- OUTPUT:
1.0271
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:41:41) 
-- CODE:
print(round((1.5)**0.066, 4))




-- EXECUTION TIME:
0.215121
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
1.0271
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:41:56) 
-- CODE:
print(round((1.5)**0.06, 4))




-- EXECUTION TIME:
0.169132
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
1.0246
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:44:30) 
-- CODE:
print(round((3/2)**0.06, 4))






-- OUTPUT:
1.0246
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:44:31) 
-- CODE:
print(round((3/2)**0.06, 4))






-- EXECUTION TIME:
0.119349
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
1.0246
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:46:23) 
-- CODE:
print(round(3/2*15, 4))






-- OUTPUT:
22.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:46:24) 
-- CODE:
print(round(3/2*15, 4))






-- EXECUTION TIME:
0.189115
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
22.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:47:57) 
-- CODE:
print(round(3/2*(**0.06), 4))






-- ERROR:
File "XXXX", line 1
    print(round(3/2*(**0.06), 4))
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:48:00) 
-- CODE:
print(round(3/2*(**0.06, 4))






-- ERROR:
File "XXXX", line 1
    print(round(3/2*(**0.06, 4))
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:48:07) 
-- CODE:
print(round(3/2**0.06, 4))






-- OUTPUT:
2.8778
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:48:09) 
-- CODE:
print(round(3/2**0.06, 4))






-- EXECUTION TIME:
0.200989
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
2.8778
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:48:10) 
-- CODE:
print(round(3/2**0.06, 4))






-- OUTPUT:
2.8778
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:49:07) 
-- CODE:
print(round((3*5**2)**0.3/2, 4))






-- OUTPUT:
1.8259
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:49:08) 
-- CODE:
print(round((3*5**2)**0.3/2, 4))






-- EXECUTION TIME:
0.119899
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
1.8259
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:49:17) 
-- CODE:
print(round((3*5**2)**0.33/2, 4))






-- OUTPUT:
2.0785
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:49:18) 
-- CODE:
print(round((3*5**2)**0.33/2, 4))






-- EXECUTION TIME:
0.144153
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
2.0785
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:50:01) 
-- CODE:
print(round((75)**0.33/2, 4))






-- OUTPUT:
2.0785
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:50:02) 
-- CODE:
print(round((75)**0.33/2, 4))






-- EXECUTION TIME:
0.156026
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
2.0785
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:58:52) 
-- CODE:
print(round(3/2*(3)**0.5*5**2, 4))






-- EXECUTION TIME:
0.233266
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
